[package]
name = "pdd"
version = "0.1.0"
authors = ["sinitcin <antony@email.su>"]

[workspace]
members = [
    "libconfig",
    "libdb",
    "libdbgserver",
    "libengine",
    "libmercury",
    "librestrim",
    "libcomchannel",
]

[dependencies]
libconfig = { path = "./libconfig"}
libdbgserver = {path = "./libdbgserver"}
libengine = {path = "./libengine"}
librestrim = {path = "./librestrim"}
libdb = {path = "./libdb"}
libmercury = {path = "./libmercury"}

serde_derive = "*"
serde = "*"
serde_json = "*"