[package]
name = "libcomchannel"
version = "0.1.0"
authors = ["Антон Синицын <antony@email.su>"]
edition = "2018"
workspace = "../"

[dependencies]
libengine = {path = "../libengine"}
serial = "0.4"
serial-core = "0.4"
serde_derive = "*"
serde = "*"
serde_json = "*"
uuid = { version = "0.5", features = ["v4"] }
byteorder = "1.2"
crc = "^1.0.0"

[target.'cfg(unix)'.dependencies]
serial-unix = "0.4"

[target.'cfg(windows)'.dependencies]
serial-windows = "0.4"