[package]
name = "libengine"
version = "0.1.0"
authors = ["sinitcin <antony@email.su>"]

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
serial = "0.4"
serial-core = "0.4"

[target.'cfg(unix)'.dependencies]
serial-unix = "0.4"

[target.'cfg(windows)'.dependencies]
serial-windows = "0.4"